[tool.poetry]
name = "beamer"
version = "2.3.0"
description = "Bridging rollups with L1 guaranteed security"
authors = ["Beamer Bridge Team <contact@beamerbridge.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.beamerbridge.com/"
repository = "https://github.com/beamer-bridge/beamer"
documentation = "https://docs.beamerbridge.com/"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
web3 = "^6.5.0"
click = "=8.1.3"
structlog = "^23.1.0"
python-statemachine = "^2.0.0"
prometheus-client = "^0.17.0"
lru-dict = "^1.2.0"
toml = "^0.10.2"
atomics = "^1.0.2"
apischema = "^0.18.0"
xdg-base-dirs = "^6.0.0"
typing-extensions = "^4.7.1"

[tool.poetry.dev-dependencies]
freezegun = "^1.2.2"
types-pyyaml = "^6.0.12"
types-python-dateutil = "^2.8.19.13"
psutil = "^5.9.5"
eth-ape = "^0.6.12"
ape-solidity = "^0.6.5"
ape-ganache = "^0.6.7"
ape-alchemy = "^0.6.2"
ape-infura = "^0.6.2"
ape-optimism = "^0.6.2"
ape-arbitrum = "^0.6.1"
ape-etherscan = "^0.6.7"
ape-polygon-zkevm = "^0.1.1"
ape-base = "^0.6.0"
pytest = "^7.4.0"
black = "^23.3"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-tuple = "^0.4.1"
flake8-bugbear = "^23.6.5"
mypy = "^1.0"
eth-account = "^0.8.0"
pylint = "^2.17.4"
ruff = "^0.0.277"
types-pkg-resources = "^0.1.3"
types-requests = "^2.31.0"
pdbpp = "^0.10.3"
pytest-cov = "^4.1.0"
shiv = "^1.0.3"
Sphinx = "^7.0.1"
furo = "^2023.3.27"
sphinxcontrib-mermaid = "^0.9"
sphinxcontrib-soliditydomain = {git = "https://github.com/beamer-bridge/sphinxcontrib-soliditydomain.git", rev = "main"}
types-toml = "^0.10.8"

[tool.poetry.scripts]
beamer = 'beamer.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | dist
)/
'''

[tool.isort]
line_length = 99
profile = "black"
multi_line_output = 3
ignore_whitespace = true

[[tool.mypy.overrides]]
module = ["ape.*", "twisted.*"]
ignore_missing_imports = true

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["beamer.tests.*"]
disallow_untyped_defs = false
disable_error_code = "attr-defined,name-defined"

[tool.pytest.ini_options]
filterwarnings = "ignore:Development network has a block height of"

[tool.coverage.run]
source = ["beamer"]
omit = ["beamer/tests/*"]

[tool.ruff]
line-length = 99
