[tool.poetry]
name = "RaiSync"
version = "0.0.1"
description = "Bridging rollups with L1 guaranteed security"
authors = ["brainbot technologies"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
eth-brownie = "^1.16.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
