[tool.poetry]
name = "RaiSync"
version = "0.0.1"
description = "Bridging rollups with L1 guaranteed security"
authors = ["brainbot technologies"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
flake8-tuple = "^0.4.1"
flake8-bugbear = "^21.9.2"

[tool.poetry.dev-dependencies]
eth-brownie = "^1.16.4"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
